--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="content">
                 <header>
                     <div class="headerclass">
-                        <H1>Deluxe Parkering</H1>
+                        <H1>Väkommen till mig</H1>
                         <h3>Boka lyxigare parkering</h3>
                         <p>Vi tar hand om din bil när inte du gör det</p>
                         </div>
@@ -29,12 +29,7 @@
                 <nav>
                     <div>
                     <ul>
-                        <li><a href="index.html">Hem</a></li>
-                        <li><a href="boka.html">Boka Parkering</a></li>
-                        <li><a href="ovriga.html">Våra Övriga Tjänster</a></li>
-                        <li><a href="hitta.html">Hitta Oss</a></li>
-                        <li><a href="kontakt.html">Kontakta Oss</a></li>
-                        <li><a href="omoss.html">Om Sidan</a></li>
+                       
     
                     </ul>
                 </div>
